2005-02-02  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c (rs6000_override_options): Default to
	natural alignment for 64-bit Darwin.
	(rs6000_parse_alignment_option): Error or warn on uses of
	-malign-mac68k and -malign-power on 64-bit Darwin, respectively.

2005-01-19  Geoffrey Keating  <geoffk@apple.com>

	Radar 3932082
	* config.gcc (*-*-darwin*): Use darwin8.h on darwin8+.
	* config/darwin7.h: Update comment.
	* config/darwin8.h: New.

2005-01-11  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c (machopic_output_stub): Issue
	ldu instead of lwzu if 64-bit -mdynamic-no-pic.

2005-01-06  Daniel Berlin <dberlin@dberlin.org> 

        Fix PR tree-optimization/18792
        * tree-data-ref.c (build_classic_dist_vector): Change first_loop
        to first_loop_depth, and use loop depth instead of loop number.
        (build_classic_dir_vector): Ditto.
        (compute_data_dependences_for_loop): Use depth, not loop number.
        * tree-loop-linear.c (try_interchange_loops): Use loop depth, not loop
        number. Pass in loops, instead of loop numbers.
        (gather_interchange_stats): Ditto.
        (linear_transform_loops): Ditto.

2005-01-05  Stan Shebs  <shebs@apple.com>

	* unwind-dw2-fde-darwin.c (examine_objects): Use 64-bit
	Mach-O getters if ppc64.
	* config/darwin.c (darwin_asm_output_dwarf_delta): Obey
	size argument.
	* config/darwin.h (ASM_PREFERRED_EH_DATA_FORMAT): Use
	signed four-byte field for global code case.

2005-01-03  Geoffrey Keating  <geoffk@apple.com>

	Radar 3933673
	* config/rs6000/darwin-fallback.c: Use 'ucontext_t' rather than
	'struct ucontext'.

2004-12-16  Geoffrey Keating  <geoffk@apple.com>

	* c-cppbuiltin.c (builtin_define_float_constants): Set __*_EPSILON__
	for IBM long double format correctly.

	* config/darwin.c (darwin_handle_weak_import_attribute): Permit
	VAR_DECLs to have weak_import attribute.

2004-12-09  Stan Shebs  <shebs@apple.com>
